--- a/_config.yml
+++ b/_config.yml
@@ -56,9 +56,9 @@ JB :
   #   - When setting BASE_PATH it must be a valid url.
   #     This means always setting the protocol (http|https) or prefixing with "/"
   
-  #BASE_PATH : false
+  BASE_PATH : false
 
-  BASE_PATH : http://zentral.github.io/zentral
+  #BASE_PATH : http://zentral.github.io/zentral
 
   # These paths are to the main pages Jekyll-Bootstrap ships with.
   # Some JB helpers refer to these paths; change them here if needed.
