changed html filename

--- a/_config.yml
+++ b/_config.yml
@@ -129,7 +129,7 @@ JB :
   navi_pages:
      - "Ausstellung&Performance"
      - "Biografie&Artefakt"
-     - "Tonträger&Unterhaltung"
+     - "Tontraeger&Unterhaltung"
      - "Diskurs&Konfrontation"
      - "Kontakt"
     
